--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 </head>
 <body>
   <div align="center">
-    <h1>Congratulations!</h1>
-    <h2>You have successfully created a pipeline that retrieved this source application from an Amazon S3 bucket and deployed it 
-	to three Amazon EC2 instances using AWS CodeDeploy.</h2>
+    <h1>Hello!</h1>
+    <h2>We have successfully created a pipeline that retrieved this source application from Github and deployed it 
+	to an Amazon EC2 instance using AWS CodeDeploy.</h2>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
   </div>
 </body>
