--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h1>Hello!</h1>
     <h2>We have successfully created a pipeline that retrieved this source application from Github and deployed it 
 	to an Amazon EC2 instance using AWS CodeDeploy.</h2>
-    <p>other cloud providers are available</p>
+    <p>other cloud providers are not available</p>
   </div>
 </body>
 </html>
